//共享消息定义
package gabriel.protocol.server;

message Server_Info
{
    optional uint32 server_type = 1;
    optional uint32 server_id = 2;    
    optional string inner_addr = 3;
    optional string outer_addr = 4;    
    optional uint32 port = 5;
}
